--- a/html/Hw2_ShopLine.css
+++ b/html/Hw2_ShopLine.css
@@ -220,7 +220,7 @@ body{
 .row .text .list div::before{
     content: "\2714";
     color: blue;
-    background-color: 	#87CEFA;
+    background-color: 	#91d3fc;
     border-radius: 50%;
     padding: 3px;
     width: 5px;
