--- a/html/Hw2_ShopLine.css
+++ b/html/Hw2_ShopLine.css
@@ -111,7 +111,8 @@ body{
 
 /* main */
 .main{
-    width: 100%;
+    width: 1200px;
+    margin: auto;
     background-color: #00142d;
     color: white;
     display: flex;
@@ -222,7 +223,7 @@ body{
 .row .text .list div::before{
     content: "\2714";
     color: blue;
-    background-color: 	#87cffc;
+    background-color: 	#87CEFA;
     border-radius: 50%;
     padding: 3px;
     width: 5px;
@@ -231,6 +232,7 @@ body{
 }
 .list{
     font-size: 17px;
+    line-height: 30px;
     width: 700px;
     display: flex;
     flex-wrap: wrap;
@@ -253,11 +255,11 @@ body{
 
 /* moreservice */
 .moreservice{
-    background-color: #F5F5F5;
 }
 .moreservice .wrap{
     width: 1200px;
     margin: auto;
+    background-color: #F5F5F5;
     display: flex;
     flex-wrap: wrap;
 }
@@ -346,7 +348,7 @@ body{
 
 /* end */
 .end{
-    width: 100%;
+    width: 1200px;
     height: 490px;
     margin: auto;
     display: flex;
@@ -388,35 +390,32 @@ body{
 
 /* footer-top */
 .footer-top{
-    width: 100%;
+    width: 1200px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     background-color: #00142d;
 }
-.footer-top .divider{
-    width: 100%;
-    margin: 30px 100px;
-}
-.footer-top .divider hr{
+.footer-top hr{
     background-color: gray;
-    width: 1300px;
-    height: 1px;
     border: none;
+    width: 1160px;
+    height: 1px;
+    margin: 30px 20px;
 }
 .footer-top .menu{
-    width: 100px;
-    margin: 5px 10px 20px 110px;
+    width: 132px;
+    margin: 5px 5px 20px 50px;
     margin-right: -45px;
     color: white;
     display: flex;
     flex-direction: column;
 }
 .footer-top .solve{
-    width: 115px;
+    width: 150px;
 }
 .footer-top .other{
-    width: 250px;
+    width: 220px; 
 }
 .footer-top .menu h3{
     margin-bottom: 20px;
@@ -434,7 +433,9 @@ body{
 
 /* news */
 .news{
+    width: 1200px;
     height: 100px;
+    margin: auto;
     background-color: #00142d;
     text-align: right;
     padding-top: 50px;
@@ -452,9 +453,10 @@ body{
     color: white;
 }
 
+
 /* footer-bottom */
 .footer-bottom{
-    width: 100%;
+    width: 1200px;
     height: 150px;
     display: flex;
     flex-wrap: wrap;
@@ -463,15 +465,12 @@ body{
     color:white;
     padding-bottom: 30px;
 }
-.footer-bottom .divider{
-    width: 100%;
-    margin: 30px 100px 2px;
-}
 .footer-bottom .divider hr{
     background-color: gray;
     border: none;
+    width: 1160px;
     height: 1px;
-    width: 1300px;
+    margin: 30px 20px;
 }
 .footer-bottom .control{
     width: 300px;
