--- a/html/Hw2_ShopLine.css
+++ b/html/Hw2_ShopLine.css
@@ -255,11 +255,11 @@ body{
 
 /* moreservice */
 .moreservice{
+    background-color: #F5F5F5;
 }
 .moreservice .wrap{
     width: 1200px;
     margin: auto;
-    background-color: #F5F5F5;
     display: flex;
     flex-wrap: wrap;
 }
@@ -347,13 +347,16 @@ body{
 }
 
 /* end */
+.world{
+    width: 100%;
+    background-color: #032249;
+}
 .end{
     width: 1200px;
     height: 490px;
     margin: auto;
     display: flex;
     /* flex-wrap: wrap; */
-    background-color: #032249;
 }
 .end .pic{
     width: 600px;
@@ -389,12 +392,15 @@ body{
 }
 
 /* footer-top */
+.footer{
+    width: 100%;
+    background-color: #00142d;
+}
 .footer-top{
     width: 1200px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background-color: #00142d;
 }
 .footer-top hr{
     background-color: gray;
