--- a/html/Hw2_ShopLine.css
+++ b/html/Hw2_ShopLine.css
@@ -111,7 +111,7 @@ body{
 
 /* main */
 .main{
-    width: 1200px;
+    width: 100%;
     margin: auto;
     background-color: #00142d;
     color: white;
