--- a/html/Hw2_ShopLine.css
+++ b/html/Hw2_ShopLine.css
@@ -1,111 +1,124 @@
 body{
-    padding-top: 125px;
+    padding-top: 140px;
 }
-/* donate */
-.donate{
-    width: 100%;
-    height: 30px;
-    background-color: 	#FF8000;
+h2{
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 150%;
+    margin-bottom: 10px;
+}
+h3{
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 150%;
+    margin-bottom: 10px;
+}
+p{
+    font-size: 18px;
+    line-height: 200%;
+    margin-bottom: 10px;
+}
+
+/* notice */
+.notice{
     text-align: center;
+    width: 100%;
+    background-color: #fe7200;
     position: fixed;
     top: 0;
     left: 0;
 }
-.donate a{
-    font-size: 15px;
-    line-height: 30px;
-    text-decoration: none;
-    color: white;
-}
-.donate .close{
+.notice a{
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    position: relative;
-    left: 550px;
-}
-.close a{
     text-decoration: none;
+    font-size: 15px;
+    margin: 10px;
     color: white;
+}
+.notice .close{
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 30px;
 }
 
 /* header-top */
-.header-top {
+.header-top{
+    text-align: right;
     width: 100%;
     background-color: black;
-    text-align: right;
-    border: none;
     position: fixed;
-    top: 30px;
+    top: 35px;
     left: 0;
 }
-.header-top a {
-    color: white;
-    font-size: 16px;
-    text-decoration: none;
-    display: inline-block;
-    line-height: 35px;
-    padding: 0 10px;
+.header-top .section{
+    margin: 0px 90px;
 }
-.header-top a:hover {
+.header-top .section a{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 15px;
+    padding: 5px;
+    margin: 5px;
+    color: white;
+}
+.header-top a:hover{
     color: blue;
+}
+.header-top .section .icon{
+    vertical-align: center;
+    padding:  0px 15px;
+    border-right: 1px white solid;
 }
 
 /* header */
-.header {
+.header{
     width: 100%;
-    height: 60px;
-    border: none;
     background-color: white;
-    display: flex;
-    /* flex-wrap: wrap; */
     position: fixed;
-    top: 65px;
+    top: 70px;
     left: 0;
-
 }
-.header .logo img{
-    width: 150px;
+.header .pack{
+    margin: 0px 80px;
+    display: flex;
+}
+.header .logo h1 img{
+    width: 160px;
     height: 28px;
-    margin: 18px 50px 18px 110px;
+    margin: 20px;
+    vertical-align: middle;
 }
-.header nav {
-    text-align: left;
+.header nav{
+    flex-grow: 1;
 }
-.header nav a {
-    font-size: 15px;
-    color: black;
-    text-decoration: none;
+.header nav a{
     display: inline-block;
-    margin: 21px 10px;
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+    margin: 27px 5px;
+}
+.header nav a:hover{
+    color: blue;
 }
 .header nav a img{
     width: 10px;
     height: 10px;
-    margin: auto 1px;
-    opacity: 70%;
 }
-.header nav a:hover {
-    color: blue;
-}
-.header .url{
-    display: inline-block;
-    width: 60px;
-    height: 30px;
+.header .btn-try{
+    width: 100px;
     background-color: blue;
     border-radius: 100px;
     text-align: center;
-    padding: 5px 17px;
-    margin: 10px 0px 10px 350px;
-    
+    padding: 10px;
+    margin: auto 100px;
 }
-.header .url a{
-    font-size: 15px;
+.header .btn-try a{
     color: white;
     text-decoration: none;
-    line-height: 30px;
 }
-.header a:hover{
+.header .btn-try a:hover{
     opacity: 70%;
 }
 
@@ -117,24 +130,19 @@ body{
     color: white;
     display: flex;
     /* flex-wrap: wrap; */
-    margin: auto;
+    justify-content: space-around;
 }
 .main .text{
     width: 696px;
-    padding: 100px 200px 100px 100px;
+    padding: 100px 50px 100px 100px;
     font-weight: bold;
     line-height: 150%;
-}
-.main .text h2{
-    font-size: 40px;
 }
 .main .text .special{
     color: #228b22;
 }
 .main .text p{
-    font-size: 18px;
     font-weight: bold;
-    line-height: 40px;
     margin-bottom: 50px;
 }
 .main .text input{
@@ -155,8 +163,8 @@ body{
     width: 100px;
     height: 18px;
     padding: 10px;
-    text-align: center;
     text-decoration: none;
+    text-align: center;
     background-color: blue;
     border-radius: 100px;
     color: white;
@@ -169,21 +177,14 @@ body{
 .main .pic{
     width: 474px;
     padding: 100px 10px;
+    overflow: hidden;
 }
 
 /* about */
 .about {
     width: 550px;
     text-align: center;
-    margin: auto;
-}
-.about h2{
-    font-size: 35px;
-    font-weight: bold;
-}
-.about p{
-    font-size: 16px;
-    line-height: 200%;
+    margin: 50px auto;
 }
 
 /* group */
@@ -210,37 +211,31 @@ body{
     padding: 10px;
     margin: 10px;
 }
-.row .text h3{
-    font-size: 35px;
-    font-weight: blood;
-    line-height: 150%;
-}
 .row .text p{
-    font-size: 18px;
     margin-bottom: 30px;
-    line-height: 200%;
 }
-.row .text .list div::before{
-    content: "\2714";
-    color: blue;
-    background-color: 	#87CEFA;
-    border-radius: 50%;
-    padding: 3px;
-    width: 5px;
-    height: 5px;
-    margin-right: 10px;
-}
-.list{
+.list ul{
     font-size: 17px;
     line-height: 30px;
-    width: 700px;
+    width: 670px;
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 30px;
 }
-.list div{
-    width: 350px;
+.list li{
+    width: 335px;
     margin-bottom: 10px;
+}
+.row .text .list li::before{
+    content: "\2714";
+    color: blue;
+    background-color: 	#87CEFA;
+    border-radius: 50%;
+    padding: 3px; 
+    width: 6px;
+    height: 6px;
+    vertical-align: middle;
+    margin-right: 10px;
 }
 .text a{
     text-decoration: none;
@@ -254,22 +249,27 @@ body{
 }
 
 /* moreservice */
-.moreservice{
-    width: 100%;
+.more_service{
+    padding: 50px 0px;
     background-color: #F5F5F5;
+    margin-bottom: 10px;
 }
-.moreservice .wrap{
+.more_service h2{
+    display: block;
+    margin: auto;
+}
+.more_service .wrap{
     width: 1200px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
 }
-.moreservice .wrap .item{
+.more_service .wrap .item{
     width: 350px;
     margin: 25px;
     text-align: center;
 }
-.moreservice .wrap .item .img{
+.more_service .wrap .item .img{
     text-align: center;
     width: 130px;
     height: 130px;
@@ -277,43 +277,43 @@ body{
     border-radius: 50%;
     background-color: white;
 }
-.moreservice .wrap .item img{
-    margin: auto;
-    padding: 25px 23px;
+.more_service .wrap .item img{
+    padding: 20px 18px;
+}
+.more_service .wrap .item p{
+    font-size: 15px;
 }
 
-/* recommend */
-.recommend{
+/* brand */
+.brand{
     width: 1200px;
-    margin: auto;
+    margin: 10px auto;
 }
-.recommend .part{
+.brand .part{
     display: flex;
     /* flex-wrap: wrap; */
 }
-.moreservice .wrap h2, .recommend .part h2{
+.brand .part h2{
     width: 1200px;
-    font-size: 35px;
-    font-weight: bold;
     text-align: center;
     padding: 20px 0px;
 }
-.recommend .part .item{
+.brand .part .item{
     width: 230px;
     margin: 5px;
     overflow: hidden;
     text-align: center;
     margin-bottom: 10px;
 }
-.recommend .part .item img{
+.brand .part .item img{
     width: 180px;
-    height: 80px;
+    height: 90px;
     margin: 50px 5px;
 }
-.recommend .part .item .special{
+.brand .part .item .special{
     width: 50%;
 }
-.recommend .introd{
+.brand .introd{
     width: 1200px;
     height: 250px;
     margin: auto;
@@ -322,213 +322,195 @@ body{
     margin-bottom: 25px;
 
 }
-.recommend .introd .desc{
+.brand .introd .desc{
     width: 560px;
     padding: 10px;
 }
-.recommend .introd .desc a{
+.brand .introd .desc a{
     color: blue;
     text-decoration: none;
     font-size: 18px;
     line-height: 36px;
 }
-.recommend .introd .desc p{
+.brand .introd .desc p{
     font-size: 18px;
+    line-height: 28px;
 }
-.recommend .introd .desc .under{
+.brand .introd .desc .under{
     display: block;
     margin-top: 80px;
 }
-.recommend .introd .pic{
+.brand .introd .pic{
     width: 580px;
 }
-.recommend .introd .pic img{
+.brand .introd .pic img{
     width: 100%;
     margin: 0px 25px;
 }
 
-/* end */
-.end{
+/* publicity */
+.publicity{
     width: 100%;
-    height: 490px;
+    height: 430px;
     margin: auto;
     display: flex;
     /* flex-wrap: wrap; */
+    justify-content: space-around;
     background-color: #032249;
 }
-.end .pic{
+.publicity .title{
     width: 600px;
-    overflow: hidden;
-    margin-left: 100px;
-}
-.end .pic img{
-    margin-top: 80px;
-}
-.end .title{
     margin: 100px 0px 10px 100px;
 }
-.end .title h2{
+.publicity .title h2{
     color: white;
     font-size: 45px;
     margin-bottom: 50px;
 }
-.end .thing{
+.publicity .thing{
     width: 350px;
-    height: 50px;
+    text-align: center;
     border-radius: 100px;
     background-color: blue;
 }
-.end .thing a{
+.publicity .thing a{
     display: block;
     font-size: 20px;
     color: white;
     text-decoration: none;
     padding: 10px 100px;
 }
-.end .thing a:hover{
+.publicity .thing a:hover{
     opacity: 70%;
 }
+.publicity .pic{
+    width: 700px;
+    overflow: hidden;
+}
+.publicity .pic img{
+    margin: 10px 0px 0px 10px;
+}
 
-/* footer-top */
-.footer-top{
+/* footer */
+.footer{
     width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
     background-color: #00142d;
 }
-.footer-top .divider{
-    width: 100%;
-    margin: 0px 100px;
-
+.divider, .footer .overall{
+    margin: 0px 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
-.footer-top hr{
+.divider{
+    padding: 15px 0px;
+}
+.divider hr{
     background-color: gray;
     border: none;
-    width: 1300px;
+    width: 1400px;
     height: 1px;
-    margin: 30px 20px;
 }
-.footer-top .menu{
-    width: 150px;
-    margin: 5px 5px 20px 150px;
-    margin-right: -140px;
+.footer .menu{
+    width: 110px;
+    margin: 15px;
     color: white;
-    display: flex;
-    flex-direction: column;
 }
-.footer-top .solve{
-    width: 150px;
+.footer .other{
+    width: 220px;
 }
-.footer-top .other{
-    width: 220px; 
-}
-.footer-top .menu h3{
+.footer .menu h3{
     margin-bottom: 20px;
     font-size: 16px;
 }
-.footer-top .menu a{
+.footer .menu a{
     font-size: 15px;
+    line-height: 30px;
     color: gray;
-    margin: 10px 0px;
     text-decoration: none;
 }
-.footer-top .menu a:hover{
+.footer .menu a:hover{
     color: white;
 }
-
-/* news */
-.news{
-    width: 100%;
-    height: 100px;
-    margin: auto;
-    background-color: #00142d;
+.footer .btn-news{
     text-align: right;
-    padding-top: 50px;
+    margin: 0px 30px;
+    padding: 35px 0px;
 }
-.news a{
+.footer .btn-news a{
     text-decoration: none;
     color: black;
-    border: 2px solid #ccc;
     background-color: #ccc;
     font-weight: bold;
     padding: 10px 50px;
     margin-right: 100px;
 }
-.news a:hover{
+.footer .btn-news a:hover{
     color: white;
 }
-
-
-/* footer-bottom */
-.footer-bottom{
-    width: 100%;
-    height: 150px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    background-color: #00142d;
+.bottom{
     color:white;
     padding-bottom: 30px;
 }
-.footer-bottom .divider{
-    width: 100%;
-    margin: 0px 100px;
-
-}
-.footer-bottom .divider hr{
-    background-color: gray;
-    border: none;
-    width: 1300px;
-    height: 1px;
-    margin: 30px 20px;
-}
-.footer-bottom .control{
-    width: 300px;
-    margin: 50px;
-    margin: auto;
-}
-.footer-bottom .inf{
+.bottom .wrap{
+    margin: 0px 30px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
-.footer-bottom .inf a + a::before{
-    content: '|';
-    color: white;
-}
-.footer-bottom .inf a{
-    text-decoration: none;
-    color: white;
-    padding: 6px 2px;
+.bottom .inf, .bottom .app, .bottom .copy{
+    width: 380px;
+    padding: 10px;
+    margin: 10px;
     text-align: center;
 }
-.footer-bottom .inf a:hover{
+.bottom .inf a{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    padding: 0px 5px;
+    margin: 30px 0px;
+    border-right: 1px solid white;
+}
+.bottom .wrap .inf :last-child{
+    border: none;
+}
+.bottom .inf a:hover, .bottom .app i:hover{
     color: blue;
 }
-.footer-bottom .app img{
+.bottom .app a i{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    line-height: 35px;
+    background-color:#032249;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
-    margin-left: 15px;
+    margin: 30px 20px 30px 0px;
 }
-.footer-bottom .copy{
+.bottom .copy{
     font-size: 15px;
     line-height: 150%;
+    color: gray;
     text-align: center;
 }
 
 /* chat */
 .chat button{
     background-color: 	#46A3FF;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: none;
     position: fixed;
     opacity: 0.5;
-    right: 50px;
-    bottom: 50px;
+    right: 30px;
+    bottom: 30px;
     cursor: pointer;
 }
 .chat button img{
     width: 50%;
     height: 50%;
-    margin: 10px;
+    margin: 15px 10px;
 }
