--- a/html/Hw3_Toyota_2.css
+++ b/html/Hw3_Toyota_2.css
@@ -118,6 +118,7 @@ i{
 }
 .control-even .btn-youtube{
     grid-area: 9 / 1 / 9 / 3;
+    padding-left: 35px;
     /* grid-column: 1/3;
     grid-row: 9/9; */
 }
