--- a/html/Hw3_Toyota_2.css
+++ b/html/Hw3_Toyota_2.css
@@ -106,6 +106,7 @@ i{
 }
 .control-odd .pic{
     grid-area: 4 / 5 / 14 / 19;
+    cursor: pointer;
     /* grid-column: 5/19;
     grid-row: 4/14; */
 }
@@ -126,6 +127,7 @@ i{
 .control-even .pic{
     grid-area: 4 / 1 / 14 / 16;
     padding-left: 20px;
+    cursor: pointer;
     /* grid-column: 2/16;
     grid-row: 4/14; */
 }
