--- a/html/Hw3_Toyota_2.css
+++ b/html/Hw3_Toyota_2.css
@@ -42,14 +42,9 @@ ul li{
 }
 span{
     writing-mode: vertical-lr;
-    font-size:80px;
-}
-i{
-    font-size: 50px;
-    color: red;
-    /* background-color: white; */
-    width: 55px;
-    height: 50px;
+    font-size: 100px;
+    line-height: 50%;
+    font-weight:lighter;
 }
 
 .control-odd, .control-even{
@@ -63,7 +58,7 @@ i{
 }
 .introduce h2{
     height: 80px;
-    padding: 30px 10px 20px 10px;
+    padding: 30px 10px 40px 10px;
     background-color: #ae0014;
 }
 .innovation{
@@ -94,6 +89,10 @@ i{
 }
 
 /* 差異設定 */
+.control-odd span{
+    margin: 0px 30px 0px 0px;
+    text-align: left;
+}
 .control-odd .introduce{
     grid-area: 1 / 1 / 10 / 8;
     /* grid-column: 1/8;
@@ -122,7 +121,11 @@ i{
 }
 
 .control-even .introduce h2{
-    text-align: center;
+    text-align: right;
+}
+.control-even span{
+    margin: 0px 0px 0px 30px;
+    text-align: right;
 }
 .control-even .pic{
     grid-area: 4 / 1 / 14 / 16;
